--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: "ProximaNova-Light";
+    src: url("assets/fonts/Proxima_Nova-light.woff") format("woff"),
+        url("assets/fonts/Proxima_Nova-light.woff2") format("woff2"),
+      url("assets/fonts/Proxima_Nova-light.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: "ProximaNova-Regular";
+    src: url("assets/fonts/Proxima_Nova-regular.woff") format("woff"),
+        url("assets/fonts/Proxima_Nova-regular.woff2") format("woff2"),
+      url("assets/fonts/Proxima_Nova-regular.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova-Semibold";
+    src: url("assets/fonts/Proxima_Nova-semibold.woff") format("woff"),
+        url("assets/fonts/Proxima_Nova-semibold.woff2") format("woff2"),
+      url("assets/fonts/Proxima_Nova-semibold.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova-Bold";
+    src: url("assets/fonts/Proxima_Nova-bold.woff") format("woff"),
+        url("assets/fonts/Proxima_Nova-bold.woff2") format("woff2"),
+      url("assets/fonts/Proxima_Nova-bold.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
