added works and menu nav works

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ html, body {
 
 p {
     font-family: 'ProximaNova-Regular', sans-serif;
-    font-size: 1.1em;
-    line-height: 22px;
+    font-size: 1.12em;
+    line-height: 1.55em;
 }
 
 h1 {
