--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,12 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+  font-family: "Anton";
+  src: url("assets/fonts/Anton.woff") format("woff"),
+      url("assets/fonts/Anton.woff2") format("woff2"),
+    url("assets/fonts/Anton.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
